--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,5 +1,8 @@
 <ul class="list-group">
-    <li (click)="setCurrentCategory(category)" *ngFor="let category of categories" 
+  <li [class]="getAllCategoryClass()"routerLink="/products">Tüm Ürünler</li>
+    <li (click)="setCurrentCategory(category)" 
+    routerLink="/products/category/{{category.categoryId}}"
+    *ngFor="let category of categories" 
     [class]="getCurrentCategoryClass(category)">{{category.categoryName}}</li>
   </ul>
 <h5 *ngIf="currentCategory" >{{currentCategory.categoryName}} seçtiniz</h5>
